force-app/main/default/objects/Opportunity/fields/ActaConstitutivaCliente__c.field-meta.xml
<CustomField>
    <fullName>ActaConstitutivaCliente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acta Constitutiva Cliente</label>
    <type>Checkbox</type>
</CustomField>