force-app/main/default/objects/Opportunity/fields/AlertDate__c.field-meta.xml
<CustomField>
    <fullName>AlertDate__c</fullName>
    <description>Fecha 3 días hábiles antes de la fecha estimada de compra (CloseDate).</description>
    <formula>IF(NOT(ISNULL(CloseDate)),
  CASE( 
    MOD( CloseDate - DATE( 1900, 1, 7 ), 7 ),
    1, CloseDate - 2 - 3,
    2, CloseDate - 2 - 3,
    3, CloseDate - 2 - 3,
    7, CloseDate - 1 - 3,
    CloseDate - 3
  ),
  null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de alerta</label>
    <type>Date</type>
</CustomField>