force-app/main/default/objects/Opportunity/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo utilizado para almacenar el usuario que será aprobador(actualmente en el proceso de aprobación de RFC en BP)</description>
    <label>Aprobador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>