force-app/main/default/objects/Opportunity/fields/bloqueoLP__c.field-meta.xml
<CustomField>
    <fullName>bloqueoLP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>bloqueoLP</label>
    <type>Checkbox</type>
</CustomField>