force-app/main/default/objects/Opportunity/fields/BPfleetApproval__c.field-meta.xml
<CustomField>
    <fullName>BPfleetApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobacion BPfleet</label>
    <type>Checkbox</type>
</CustomField>