force-app/main/default/objects/Opportunity/fields/BPStationNumber__c.field-meta.xml
<CustomField>
    <fullName>BPStationNumber__c</fullName>
    <description>Número de estación BP, obligatorio para los orígenes Cliente Actual Dealer BP, Referido Dealer BP, Migración, Migración COCO WA y Empleado BP.</description>
    <label>Número de estación BP</label>
    <length>6</length>
    <type>Text</type>
</CustomField>