force-app/main/default/objects/Opportunity/fields/campaniaRelacionada_FText__c.field-meta.xml
<CustomField>
    <fullName>campaniaRelacionada_FText__c</fullName>
    <formula>Campaign.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaña relacionada</label>
    <type>Text</type>
</CustomField>