force-app/main/default/objects/Opportunity/fields/CantidadTarjetas2__c.field-meta.xml
<CustomField>
    <fullName>CantidadTarjetas2__c</fullName>
    <label>Cantidad de tarjetas o chequeras</label>
    <summarizedField>OpportunityLineItem.CantidadTarjetas__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Etapa__c</field>
        <operation>notEqual</operation>
        <value>Perdida</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>