force-app/main/default/objects/Opportunity/fields/CantidadTarjetas__c.field-meta.xml
<CustomField>
    <fullName>CantidadTarjetas__c</fullName>
    <label>Cantidad de tarjetas total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>