force-app/main/default/objects/Opportunity/fields/CedulaRFC__c.field-meta.xml
<CustomField>
    <fullName>CedulaRFC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cédula RFC</label>
    <type>Checkbox</type>
</CustomField>