force-app/main/default/objects/Opportunity/fields/Client_operations_alert__c.field-meta.xml
<CustomField>
    <fullName>Client_operations_alert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se marca para alertar cuando no ha habido operaciones de cliente en los últimos n meses (configurable).</description>
    <label>Alerta por operaciones cliente</label>
    <type>Checkbox</type>
</CustomField>