force-app/main/default/objects/Opportunity/fields/Client_operations_closing__c.field-meta.xml
<CustomField>
    <fullName>Client_operations_closing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se marca para cerrar la oportunidad cuando no ha habido operaciones de cliente en los últimos n meses (configurable).</description>
    <label>Cierre por operaciones cliente</label>
    <type>Checkbox</type>
</CustomField>