force-app/main/default/objects/Opportunity/fields/Codigo_Producto_cotizacion__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Producto_cotizacion__c</fullName>
    <label>Código Producto cotización</label>
    <length>255</length>
    <type>Text</type>
</CustomField>