force-app/main/default/objects/Opportunity/fields/CodigoClienteAS400__c.field-meta.xml
<CustomField>
    <fullName>CodigoClienteAS400__c</fullName>
    <description>Código de cliente con producto en la oportunidad</description>
    <label>Código AS400/Id. OPAM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>