force-app/main/default/objects/Opportunity/fields/Comentarios_Ejecutivo__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_Ejecutivo__c</fullName>
    <label>Comentarios del Comercial para ADC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>