force-app/main/default/objects/Opportunity/fields/ComentariosADV__c.field-meta.xml
<CustomField>
    <fullName>ComentariosADV__c</fullName>
    <description>Comentarios de administración de ventas sobre el alta del cliente</description>
    <label>Comentarios ADV</label>
    <length>200</length>
    <type>Text</type>
</CustomField>