force-app/main/default/objects/Opportunity/fields/ComentariosEtapaImplementacion__c.field-meta.xml
<CustomField>
    <fullName>ComentariosEtapaImplementacion__c</fullName>
    <label>Comentarios Etapa Implementacion</label>
    <type>TextArea</type>
</CustomField>