force-app/main/default/objects/Opportunity/fields/Comision_por_Servicio__c.field-meta.xml
<CustomField>
    <fullName>Comision_por_Servicio__c</fullName>
    <label>Comisión por servicio (%)</label>
    <summarizedField>Quote.Comision_por_Servicio__c</summarizedField>
    <summaryFilterItems>
        <field>Quote.IsSyncing</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>