force-app/main/default/objects/Opportunity/fields/Comision_servicio_total__c.field-meta.xml
<CustomField>
    <fullName>Comision_servicio_total__c</fullName>
    <formula>Comision_por_Servicio__c  *  VolumenEmision2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comisión por servicio ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>