force-app/main/default/objects/Opportunity/fields/ComisionEmision__c.field-meta.xml
<CustomField>
    <fullName>ComisionEmision__c</fullName>
    <label>Comisión por emisión</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>