force-app/main/default/objects/Opportunity/fields/ComisionEmisionActual__c.field-meta.xml
<CustomField>
    <fullName>ComisionEmisionActual__c</fullName>
    <label>Comisión por emisión actual</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>