force-app/main/default/objects/Opportunity/fields/Competidor__c.field-meta.xml
<CustomField>
    <fullName>Competidor__c</fullName>
    <description>Competidor por familia</description>
    <label>Competidor</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Familia__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Competidor</valueSetName>
    </valueSet>
</CustomField>