force-app/main/default/objects/Opportunity/fields/CompetidorPerdida__c.field-meta.xml
<CustomField>
    <fullName>CompetidorPerdida__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competidor perdida</label>
    <referenceTo>Competidor__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>