force-app/main/default/objects/Opportunity/fields/CompraMensualActual__c.field-meta.xml
<CustomField>
    <fullName>CompraMensualActual__c</fullName>
    <label>Compra mensual actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>