force-app/main/default/objects/Opportunity/fields/ComprobanteDomicilioCliente__c.field-meta.xml
<CustomField>
    <fullName>ComprobanteDomicilioCliente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comprobante Domicilio Cliente</label>
    <type>Checkbox</type>
</CustomField>