force-app/main/default/objects/Opportunity/fields/ComprobanteDomicilioFiscal__c.field-meta.xml
<CustomField>
    <fullName>ComprobanteDomicilioFiscal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comprobante Domicilio Fiscal</label>
    <type>Checkbox</type>
</CustomField>