force-app/main/default/objects/Opportunity/fields/ConstanciaRFC__c.field-meta.xml
<CustomField>
    <fullName>ConstanciaRFC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Constancia RFC</label>
    <type>Checkbox</type>
</CustomField>