force-app/main/default/objects/Opportunity/fields/Contrato2__c.field-meta.xml
<CustomField>
    <fullName>Contrato2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato Asociado</label>
    <referenceTo>Contrato2__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>