force-app/main/default/objects/Opportunity/fields/Contrato_Filial__c.field-meta.xml
<CustomField>
    <fullName>Contrato_Filial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SubCuenta</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>La cuenta de la oportunidad no coincide con la de la sub cuenta</errorMessage>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>ContratoFilial__c.Entidad_Cuenta__r.Cuenta__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ContratoFilial__c</referenceTo>
    <relationshipLabel>Filial_Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>