force-app/main/default/objects/Opportunity/fields/Contrato_Firmado__c.field-meta.xml
<CustomField>
    <fullName>Contrato_Firmado__c</fullName>
    <formula>IF( ContratoFirmado__c , &#39;Entregado&#39;, &#39;Sin Entregar&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contrato Firmado</label>
    <type>Text</type>
</CustomField>