force-app/main/default/objects/Opportunity/fields/ContratoFirmado__c.field-meta.xml
<CustomField>
    <fullName>ContratoFirmado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contrato Firmado</label>
    <type>Checkbox</type>
</CustomField>