force-app/main/default/objects/Opportunity/fields/ContratoTC3__c.field-meta.xml
<CustomField>
    <fullName>ContratoTC3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato TC3</label>
    <referenceTo>Contrato__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>