force-app/main/default/objects/Opportunity/fields/ContratoTCM__c.field-meta.xml
<CustomField>
    <fullName>ContratoTCM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato personalizado</label>
    <referenceTo>Contrato__c</referenceTo>
    <relationshipLabel>Oportunidades (Contrato personalizado)</relationshipLabel>
    <relationshipName>Oportunidades1</relationshipName>
    <type>Lookup</type>
</CustomField>