force-app/main/default/objects/Opportunity/fields/Control_number__c.field-meta.xml
<CustomField>
    <fullName>Control_number__c</fullName>
    <label>Número de control</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>