force-app/main/default/objects/Opportunity/fields/DocCompletos__c.field-meta.xml
<CustomField>
    <fullName>DocCompletos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documentos Completos</label>
    <type>Checkbox</type>
</CustomField>