force-app/main/default/objects/Opportunity/fields/DoctoPedidoPagado__c.field-meta.xml
<CustomField>
    <fullName>DoctoPedidoPagado__c</fullName>
    <label>Descripción de doc.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>