force-app/main/default/objects/Opportunity/fields/DocumentoOportunidad__c.field-meta.xml
<CustomField>
    <fullName>DocumentoOportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Documento Oportunidad</label>
    <referenceTo>DocumentoOportunidad__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>