force-app/main/default/objects/Opportunity/fields/EjecutivoADV__c.field-meta.xml
<CustomField>
    <fullName>EjecutivoADV__c</fullName>
    <label>Ejecutivo ADV</label>
    <length>100</length>
    <type>Text</type>
</CustomField>