force-app/main/default/objects/Opportunity/fields/EjecutivoCapacitacion__c.field-meta.xml
<CustomField>
    <fullName>EjecutivoCapacitacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ejecutivo Implementación</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oportunidades2</relationshipName>
    <type>Lookup</type>
</CustomField>