force-app/main/default/objects/Opportunity/fields/EjecutivoDispersor__c.field-meta.xml
<CustomField>
    <fullName>EjecutivoDispersor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ejecutivo Dispersor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oportunidades3</relationshipName>
    <type>Lookup</type>
</CustomField>