force-app/main/default/objects/Opportunity/fields/EjecutivoImplementacion__c.field-meta.xml
<CustomField>
    <fullName>EjecutivoImplementacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ejecutivo Implementación (No usar)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oportunidades1</relationshipName>
    <type>Lookup</type>
</CustomField>