force-app/main/default/objects/Opportunity/fields/Elapsed_days__c.field-meta.xml
<CustomField>
    <fullName>Elapsed_days__c</fullName>
    <formula>IF(ISBLANK(MinStart__c),
  BLANKVALUE(TimestampGanada__c, BLANKVALUE(TimestampPerdida__c, NOW())) - CreatedDate,
  IF(MaxEnd__c &gt; MaxStart__c,
    MaxEnd__c,
    NOW()) - CreatedDate)</formula>
    <label>Días transcurridos</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>