force-app/main/default/objects/Opportunity/fields/Entidad_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Entidad_Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RFC</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>La cuenta del RFC no coincide con la cuenta de la oportunidad o la entidad legal no esta completa.</errorMessage>
        <filterItems>
            <field>EntidadCuenta__c.Cuenta__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>EntidadCuenta__c.EntidadLegal__r.Estatus__c</field>
            <operation>equals</operation>
            <value>Completa</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>EntidadCuenta__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>