force-app/main/default/objects/Opportunity/fields/Entidad_Legal__c.field-meta.xml
<CustomField>
    <fullName>Entidad_Legal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entidad Legal*</label>
    <referenceTo>EntidadLegal__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>