force-app/main/default/objects/Opportunity/fields/EntidadCuenta_RB__c.field-meta.xml
<CustomField>
    <fullName>EntidadCuenta_RB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entidad Legal</label>
    <referenceTo>EntidadCuenta__c</referenceTo>
    <relationshipLabel>Oportunidades (Entidad Legal)</relationshipLabel>
    <relationshipName>Oportunidade</relationshipName>
    <type>Lookup</type>
</CustomField>