force-app/main/default/objects/Opportunity/fields/EnvioCSVOPAM__c.field-meta.xml
<CustomField>
    <fullName>EnvioCSVOPAM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Casilla que indica cuando se enviaron los archivos csv de algún producto OPAM</description>
    <label>Envío CSV OPAM</label>
    <type>Checkbox</type>
</CustomField>