force-app/main/default/objects/Opportunity/fields/EnvioXMLTC30__c.field-meta.xml
<CustomField>
    <fullName>EnvioXMLTC30__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bandera que indica envío y se resetea en caso de rechazo de ADV</description>
    <label>Envío XML TC30</label>
    <type>Checkbox</type>
</CustomField>