force-app/main/default/objects/Opportunity/fields/Es_OPAM__c.field-meta.xml
<CustomField>
    <fullName>Es_OPAM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es OPAM</label>
    <type>Checkbox</type>
</CustomField>