force-app/main/default/objects/Opportunity/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <description>Estatus automático para tracking de alta de cliente</description>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Iniciada</fullName>
            </value>
            <value>
                <fullName>Pausada</fullName>
            </value>
            <value>
                <fullName>Cerrada</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>