force-app/main/default/objects/Opportunity/fields/Estatus_Aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Aprobacion__c</fullName>
    <description>indica el estatus de la solicitudes de aprobación</description>
    <label>Estatus Aprobacion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sin solicitud de aprobacion</fullName>
                <default>true</default>
                <label>Sin solicitud de aprobacion</label>
            </value>
            <value>
                <fullName>En proceso</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>