force-app/main/default/objects/Opportunity/fields/EstatusDoctoPagado__c.field-meta.xml
<CustomField>
    <fullName>EstatusDoctoPagado__c</fullName>
    <label>Estatus doc.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>