force-app/main/default/objects/Opportunity/fields/EstatusImplementacion__c.field-meta.xml
<CustomField>
    <fullName>EstatusImplementacion__c</fullName>
    <label>Estatus Implementación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelada</fullName>
            </value>
            <value>
                <fullName>Capacitación</fullName>
            </value>
            <value>
                <fullName>Concluida</fullName>
            </value>
            <value>
                <fullName>Pausada</fullName>
            </value>
            <value>
                <fullName>Pedido de fondos</fullName>
            </value>
            <value>
                <fullName>Pedido de tarjetas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>