force-app/main/default/objects/Opportunity/fields/Etapa_previa__c.field-meta.xml
<CustomField>
    <fullName>Etapa_previa__c</fullName>
    <description>Etapa de la oportunidad previo a que se declare como PERDIDA</description>
    <inlineHelpText>Etapa de la oportunidad previo a que se declare como PERDIDA</inlineHelpText>
    <label>Etapa previa</label>
    <length>25</length>
    <type>Text</type>
</CustomField>