force-app/main/default/objects/Opportunity/fields/Facturacion1__c.field-meta.xml
<CustomField>
    <fullName>Facturacion1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facturación 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Oportunidades (Facturación 1)</relationshipLabel>
    <relationshipName>Oportunidades1</relationshipName>
    <type>Lookup</type>
</CustomField>