force-app/main/default/objects/Opportunity/fields/Familia__c.field-meta.xml
<CustomField>
    <fullName>Familia__c</fullName>
    <label>Soluciones</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ayuda Social</fullName>
            </value>
            <value>
                <fullName>Combustible</fullName>
            </value>
            <value>
                <fullName>Despensa</fullName>
            </value>
            <value>
                <fullName>Mantenimiento</fullName>
            </value>
            <value>
                <fullName>Vestimenta</fullName>
            </value>
            <value>
                <fullName>Benefits</fullName>
            </value>
            <value>
                <fullName>Ticket Car</fullName>
            </value>
            <value>
                <fullName>Regalo</fullName>
            </value>
            <value>
                <fullName>Empresarial</fullName>
            </value>
            <value>
                <fullName>Ticket Restaurante</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>