force-app/main/default/objects/Opportunity/fields/FechaAltaContrato__c.field-meta.xml
<CustomField>
    <fullName>FechaAltaContrato__c</fullName>
    <label>Fecha alta de contrato</label>
    <type>Date</type>
</CustomField>