force-app/main/default/objects/Opportunity/fields/FechaDoctoPagado__c.field-meta.xml
<CustomField>
    <fullName>FechaDoctoPagado__c</fullName>
    <label>Fecha doc. pagado</label>
    <type>Date</type>
</CustomField>