force-app/main/default/objects/Opportunity/fields/FechaFacturacion__c.field-meta.xml
<CustomField>
    <fullName>FechaFacturacion__c</fullName>
    <label>FechaFacturacion</label>
    <type>Date</type>
</CustomField>