force-app/main/default/objects/Opportunity/fields/FechaFinADV__c.field-meta.xml
<CustomField>
    <fullName>FechaFinADV__c</fullName>
    <label>Fecha Fin ADV</label>
    <type>DateTime</type>
</CustomField>