force-app/main/default/objects/Opportunity/fields/FechaInicioADV__c.field-meta.xml
<CustomField>
    <fullName>FechaInicioADV__c</fullName>
    <label>Fecha Inicio ADV</label>
    <type>DateTime</type>
</CustomField>