force-app/main/default/objects/Opportunity/fields/FechaReactivacionCliente__c.field-meta.xml
<CustomField>
    <fullName>FechaReactivacionCliente__c</fullName>
    <label>Fecha reactivación de cliente</label>
    <type>Date</type>
</CustomField>