force-app/main/default/objects/Opportunity/fields/FechaReasignacion__c.field-meta.xml
<CustomField>
    <fullName>FechaReasignacion__c</fullName>
    <label>Fecha de Reasignación</label>
    <type>DateTime</type>
</CustomField>