force-app/main/default/objects/Opportunity/fields/FechaUltimaActividad__c.field-meta.xml
<CustomField>
    <fullName>FechaUltimaActividad__c</fullName>
    <label>Fecha ultima actividad</label>
    <type>DateTime</type>
</CustomField>