force-app/main/default/objects/Opportunity/fields/FM3__c.field-meta.xml
<CustomField>
    <fullName>FM3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FM3</label>
    <type>Checkbox</type>
</CustomField>