force-app/main/default/objects/Opportunity/fields/Follow_up_alert__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_alert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se marca para alertar cuando no ha habido seguimiento en los últimos n meses (configurable).</description>
    <label>Alerta por seguimiento</label>
    <type>Checkbox</type>
</CustomField>