force-app/main/default/objects/Opportunity/fields/Follow_up_closing__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_closing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se marca para cerrar la oportunidad cuando no ha habido seguimiento en los últimos n meses (configurable).</description>
    <label>Cierre por seguimiento</label>
    <type>Checkbox</type>
</CustomField>