force-app/main/default/objects/Opportunity/fields/Gestor__c.field-meta.xml
<CustomField>
    <fullName>Gestor__c</fullName>
    <formula>Owner.Manager.FirstName  +&quot; &quot;+ Owner.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gestor del Propietario</label>
    <type>Text</type>
</CustomField>