force-app/main/default/objects/Opportunity/fields/IdCrmLead__c.field-meta.xml
<CustomField>
    <fullName>IdCrmLead__c</fullName>
    <label>Id CRM Lead</label>
    <length>100</length>
    <type>Text</type>
</CustomField>