force-app/main/default/objects/Opportunity/fields/IdCrmOrigen__c.field-meta.xml
<CustomField>
    <fullName>IdCrmOrigen__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Id CRM Origen</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>