force-app/main/default/objects/Opportunity/fields/IdCuentaOPAM__c.field-meta.xml
<CustomField>
    <fullName>IdCuentaOPAM__c</fullName>
    <description>Se actualiza el campo cada que se genera un csv</description>
    <label>IdCuentaOPAM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>