force-app/main/default/objects/Opportunity/fields/IdEjecutivoADV__c.field-meta.xml
<CustomField>
    <fullName>IdEjecutivoADV__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id del Ejecutivo que está atendiendo el Alta de Cliente</description>
    <label>Id Ejecutivo ADV</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>