force-app/main/default/objects/Opportunity/fields/IdentificacionDoc__c.field-meta.xml
<CustomField>
    <fullName>IdentificacionDoc__c</fullName>
    <description>Identificación del Documento</description>
    <label>Núm. doc. cobranza</label>
    <length>18</length>
    <type>Text</type>
</CustomField>