force-app/main/default/objects/Opportunity/fields/IdentificacionOficialCliente__c.field-meta.xml
<CustomField>
    <fullName>IdentificacionOficialCliente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Identificacion Oficial Cliente</label>
    <type>Checkbox</type>
</CustomField>