force-app/main/default/objects/Opportunity/fields/IdentificacionOficialVigente__c.field-meta.xml
<CustomField>
    <fullName>IdentificacionOficialVigente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Identificacion Oficial Vigente</label>
    <type>Checkbox</type>
</CustomField>