force-app/main/default/objects/Opportunity/fields/IdExecutiveNotification__c.field-meta.xml
<CustomField>
    <fullName>IdExecutiveNotification__c</fullName>
    <description>Id utilizado para notificar la colaboración de BP</description>
    <label>Id Ejecutivo Notificación</label>
    <length>25</length>
    <type>Text</type>
</CustomField>