force-app/main/default/objects/Opportunity/fields/IdOportunidadOPAM__c.field-meta.xml
<CustomField>
    <fullName>IdOportunidadOPAM__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Id Oportunidad OPAM</label>
    <type>AutoNumber</type>
</CustomField>