force-app/main/default/objects/Opportunity/fields/IdOportunidadOPAMNegocio__c.field-meta.xml
<CustomField>
    <fullName>IdOportunidadOPAMNegocio__c</fullName>
    <label>IdOportunidadOPAMNegocio</label>
    <length>100</length>
    <type>Text</type>
</CustomField>