force-app/main/default/objects/Opportunity/fields/IsApprovedCreditEval__c.field-meta.xml
<CustomField>
    <fullName>IsApprovedCreditEval__c</fullName>
    <label>Tiene Aprobado Evaluación Crédito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>En Proceso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>