force-app/main/default/objects/Opportunity/fields/isCelulaCitas__c.field-meta.xml
<CustomField>
    <fullName>isCelulaCitas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indica si la oportunidad es de celula de citas</description>
    <label>Célula de Citas</label>
    <type>Checkbox</type>
</CustomField>