force-app/main/default/objects/Opportunity/fields/isConverted__c.field-meta.xml
<CustomField>
    <fullName>isConverted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se habilita cuando la oportunidad se crea por el proceso de trasnformacion de prospecto a cliente</description>
    <label>Es de Conversion</label>
    <type>Checkbox</type>
</CustomField>