force-app/main/default/objects/Opportunity/fields/Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id__c</fullName>
    <label>Id de prospecto</label>
    <length>20</length>
    <type>Text</type>
</CustomField>