force-app/main/default/objects/Opportunity/fields/LeadBP__c.field-meta.xml
<CustomField>
    <fullName>LeadBP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Prospecto del cual se genero la oportunidad solo BPfleet</description>
    <label>Prospecto BP</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Oportunidades BPfleet</relationshipLabel>
    <relationshipName>OportunidadesBPfleet</relationshipName>
    <type>Lookup</type>
</CustomField>