force-app/main/default/objects/Opportunity/fields/Litros__c.field-meta.xml
<CustomField>
    <fullName>Litros__c</fullName>
    <label>Litros Upsell</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>