force-app/main/default/objects/Opportunity/fields/Maquila__c.field-meta.xml
<CustomField>
    <fullName>Maquila__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maquila</label>
    <type>Checkbox</type>
</CustomField>