force-app/main/default/objects/Opportunity/fields/Maquilador__c.field-meta.xml
<CustomField>
    <fullName>Maquilador__c</fullName>
    <label>Soluciones White Label</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Familia__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>BP Fleet</fullName>
            </value>
            <value>
                <fullName>BP Migrados</fullName>
            </value>
            <value>
                <fullName>Chedraui</fullName>
            </value>
            <value>
                <fullName>Element</fullName>
            </value>
            <value>
                <fullName>G500 FLEET</fullName>
            </value>
            <value>
                <fullName>Hidrosina</fullName>
            </value>
            <value>
                <fullName>Servifacil</fullName>
            </value>
            <value>
                <fullName>Walmart</fullName>
            </value>
            <value>
                <fullName>Walmart Migracion</fullName>
            </value>
            <value>
                <fullName>Walmart Referidos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>