force-app/main/default/objects/Opportunity/fields/MaxEnd__c.field-meta.xml
<CustomField>
    <fullName>MaxEnd__c</fullName>
    <label>MaxFin</label>
    <summarizedField>Opportunity_stage_log__c.End__c</summarizedField>
    <summaryForeignKey>Opportunity_stage_log__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>